remove meta image

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="image" property="og:image" content="./Capture.PNG" />
+    <!-- <meta name="image" property="og:image" content="./Capture.PNG" /> -->
     <meta
       name="description"
       content="This project provides all information numerically in each country, the first-page displays all the countries, when you click on one country the other page with country info will display. Countries and details are gotten and stored in the API"
